--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -2,4 +2,7 @@
 <resources>
     <string name="turn_flashlight_on">Включить вспышку</string>
     <string name="turn_flashlight_off">Выключить вспышку</string>
+    <string name="hint_password">Password</string>
+    <string name="wrong_password">Wrong password!</string>
+    <string name="fuckng_wronj_password">Wrong password!</string>
 </resources>
