--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -5,4 +5,8 @@
     <string name="hint_password">Password</string>
     <string name="wrong_password">Wrong password!</string>
     <string name="fuckng_wronj_password">Wrong password!</string>
+    <string name="are_you_shure">Are you sure?</string>
+    <string name="leave">Leave</string>
+    <string name="foreground_notification_name">Poker Session</string>
+    <string name="session_is_active">Session is active</string>
 </resources>
