--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:ignore="MissingTranslation">
 
-    <string name="app_name">\@string_app_name</string>
+    <string name="app_name">Estimoji</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="menu_settings">Settings</string>
     <string name="hint_nickname">Nickname</string>
@@ -24,9 +24,6 @@
     <string name="menu_cancel">Cancel</string>
     <string name="hint_password">Password</string>
     <string name="wrong_password">Wrong password!</string>
-    <string name="wrong_password2">aaaa</string>
-    <string name="wrong_password3">aaaa</string>
-    <string name="fuckng_wronj_password">Wrong password!</string>
     <string name="are_you_shure">Are you sure?</string>
     <string name="leave">Leave</string>
     <string name="foreground_notification_name">Poker Session</string>
